--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,9 @@
   "env": {
     "browser": true,
     "node": true
+  },
+  "rules": {
+    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/no-static-element-interactions": 0
   }
 }
